Bumped version and updated GenerateVendorDepTask